workloads/chess-solver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chess-solver
  namespace: chess-solver
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - chess-solver.cyberdan.dev
  rules:
    - backendRefs:
        - name: chess-solver
          port: 80
